--- a/lib/nils_web/templates/page/frame.html.heex
+++ b/lib/nils_web/templates/page/frame.html.heex
@@ -3,7 +3,7 @@
 </head>
 <body>
 <a target = "_blank" href={@conn.params["dest"]} style="appearance:none">
-    <img src={@conn.params["img"]} style="width: 100%; height: 100%;">
+    <img src={@conn.params["img"]} style="width: 100%; height: 100%; min-width: 100%; min-height: 100%;">
 </a>
 </body>
 </html>
