--- a/lib/nils_web/templates/page/frame.html.heex
+++ b/lib/nils_web/templates/page/frame.html.heex
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<a target = "_blank" href={@conn.params["dest"]} style="appearance:none">
+<a target={if @conn.params["newtab"], do: "_blank", else: ""} href={@conn.params["dest"]} style="appearance:none">
     <img src={@conn.params["img"]} style="width: 100%; height: 100%; min-width: 100%; min-height: 100%;">
 </a>
 </body>
