--- a/lib/nils_web/templates/page/seal.html.heex
+++ b/lib/nils_web/templates/page/seal.html.heex
@@ -1,4 +1,6 @@
 
-<div style="margin: 0 auto;">
-<iframe width="720" height="480" src="https://www.youtube.com/embed/PL9iMPx9CpQ?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
+    <div style="display:flex;justify-content:center;align-items:center;">
+        <div>
+            <iframe width="720" height="480" src="https://www.youtube.com/embed/PL9iMPx9CpQ?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
